--- a/libuprobe/.vscode/settings.json
+++ b/libuprobe/.vscode/settings.json
@@ -19,6 +19,7 @@
         "algorithm": "c",
         "array": "c",
         "string": "c",
-        "string_view": "c"
+        "string_view": "c",
+        "libasm.h": "c"
     }
 }
