统一示例二进制命名

--- a/struct-member-offset/Makefile
+++ b/struct-member-offset/Makefile
@@ -1,5 +1,5 @@
 build:
-	gcc --static -I /usr/include/libdwarf/libdwarf-0 main.c  -ldwarf -lelf -lz -o struct-member-offset-tool
+	gcc --static -I /usr/include/libdwarf/libdwarf-0 main.c  -ldwarf -lelf -lz -o sample
 
 clean:
 	rm main
